ueye-nativelib/trunk/src/main/include/uEye.h

#define IS_INVALID_HANDLE                     1   // a handle other than the camera handle is invalid

        typedef int32_t           INT;

        typedef uint32_t          ULONG;


        typedef void*             HWND;
        #define __stdcall

typedef int     INT;
  typedef TCHAR IS_CHAR;
  typedef char IS_CHAR;


// ----------------------------------------------------------------------------
// Typedefs
// ----------------------------------------------------------------------------
typedef DWORD   HIDS;
typedef struct _UEYE_CAMERA_INFO
{
  DWORD     dwCameraID;   // this is the user definable camera ID
  DWORD     dwDeviceID;   // this is the systems enumeration ID
  DWORD     dwSensorID;   // this is the sensor ID e.g. IS_SENSOR_UI141X_M
  DWORD     dwInUse;      // flag, whether the camera is in use or not
  IS_CHAR   SerNo[16];    // serial number of the camera
  IS_CHAR   Model[16];    // model name of the camera
  DWORD     dwStatus;     // various flags with camera status
  DWORD     dwReserved[15];
}UEYE_CAMERA_INFO, *PUEYE_CAMERA_INFO;
typedef struct _UEYE_CAMERA_LIST
{
  ULONG     dwCount;
  UEYE_CAMERA_INFO uci[1];
}UEYE_CAMERA_LIST, *PUEYE_CAMERA_LIST;


  IDSEXP   is_AllocImageMem          (HIDS hf, INT width, INT height, INT bitspixel, char** ppcImgMem, int* pid);

  IDSEXP   is_SetImageMem            (HIDS hf, char* pcMem, int id);

  IDSEXP   is_GetActiveImageMem      (HIDS hf, char** ppcMem, int* pnID);



  // Camera functions
  IDSEXP is_InitCamera                  (HIDS* phf, HWND hWnd);

  IDSEXP is_LoadParameters              (HIDS hf, const IS_CHAR* pFilename);