ueye-nativelib/trunk/src/main/include/uEyeCapturerApi.h


	void WINAPI GetCameraNames(UEYE_CAMERA_LIST* cameraList);

	INT WINAPI StartRunning(HIDS* m_hCam, const char* settingsFile, LPTSTR windowName, int* monitorId, void (WINAPI*OnWindowShowCallback)(BOOL), HWND windowHandle);

	void WINAPI ProcessDllIdle();